--- a/ZombieRunX/Base.lproj/Main.storyboard
+++ b/ZombieRunX/Base.lproj/Main.storyboard
@@ -333,7 +333,7 @@
                                     <constraint firstAttribute="height" constant="50" id="lfp-87-9kX"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <state key="normal" title="Intel Team Missions (&lt;15min)">
+                                <state key="normal" title="Opportunity Test">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
